<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.update4j</groupId>
	<artifactId>update4j</artifactId>
	<version>1.5.4</version>
	<name>update4j</name>
	<description>Update and launch Java 9+ Applications</description>
	<url>https://github.com/update4j/update4j</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mordechai Meisels</name>
			<email>mordechai112@gmail.com</email>
			<organization>update4j</organization>
			<organizationUrl>http://update4j.org/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/update4j/update4j/tree/master</url>
		<connection>scm:git:https://github.com/update4j/update4j.git</connection>
		<developerConnection>scm:git:https://github.com:update4j/update4j.git</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus snapshot repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Sonatype Nexus release repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>9</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.update4j.Bootstrap</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<noqualifier>all</noqualifier>
					<failOnError>false</failOnError>
					<additionalOptions>-html5,--allow-script-in-comments</additionalOptions>
					<header>
						<!-- Google Analytics for JavaDoc -->
					<![CDATA[
						<!-- Global site tag (gtag.js) - Google Analytics -->
						<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153757199-1"></script>
						<script>
  							window.dataLayer = window.dataLayer || [];
  							function gtag(){dataLayer.push(arguments);}
  							gtag('js', new Date());

  							gtag('config', 'UA-153757199-1');
						</script>
					]]>
					</header>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>aggregate</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>